--- a/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
+++ b/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Sex'] = pd.Series(LabelEncoder().fit_transform(df['Sex']))\n",
+    "df['Sex'] = pd.Series(np.array(LabelEncoder().fit_transform(df['Sex'])))\n",
     "features = pd.DataFrame(StandardScaler().fit_transform(df.drop(columns='Rings', axis=1)), columns=df.drop(columns='Rings', axis=1).columns)\n",
     "targets = df['Rings']"
    ]
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "74513ea3",
    "metadata": {},
    "outputs": [
@@ -268,8 +268,8 @@
     "    'model__activation': ['relu','sigmoid', 'swish' , 'elu',],\n",
     "    'model__loss': ['mean_squared_error', 'mean_absolute_error'],\n",
     "}\n",
-    "model_keras_reg = KerasRegressor(model=create_model, verbose=0)\n",
-    "keras_reg_estimators, keras_reg_scores_train, keras_reg_scores_test, keras_reg_cv_results = train(features, targets, model_keras_reg, keras_reg_param, outer_splits=3, inner_splits=3)"
+    "model_keras_sequential = KerasRegressor(model=create_model, verbose=0)\n",
+    "keras_reg_estimators, keras_reg_scores_train, keras_reg_scores_test, keras_reg_cv_results = train(features, targets, model_keras_sequential, keras_reg_param, outer_splits=3, inner_splits=3)"
    ]
   },
   {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4b223f57",
    "metadata": {},
    "outputs": [
@@ -391,12 +391,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test"
+    "keras_reg_scores_test.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3351a69a",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train"
+    "keras_reg_scores_train.describe()"
    ]
   },
   {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "aba12c2c",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
     "    'model__activation': ['relu', 'swish' , 'elu',],\n",
     "    'model__loss': ['mean_squared_error', 'mean_absolute_error'],\n",
     "}\n",
-    "keras_reg_estimators2, keras_reg_scores_train2, keras_reg_scores_test2, keras_reg_cv_results2 = train(features, targets, model_keras_reg, keras_reg_param, outer_splits=5, inner_splits=4)"
+    "keras_reg_estimators2, keras_reg_scores_train2, keras_reg_scores_test2, keras_reg_cv_results2 = train(features, targets, model_keras_sequential, keras_reg_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "da42c4b3",
    "metadata": {},
    "outputs": [
@@ -764,12 +764,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test2"
+    "keras_reg_scores_test2.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a804d7f6",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train2"
+    "keras_reg_scores_train2.describe()"
    ]
   },
   {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e20c77d3",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1046,7 @@
     "    'model__activation': ['elu',],\n",
     "    'model__loss': ['mean_squared_error'],\n",
     "}\n",
-    "keras_reg_estimators3, keras_reg_scores_train3, keras_reg_scores_test3, keras_reg_cv_results3 = train(features, targets, model_keras_reg, keras_reg_param, outer_splits=3, inner_splits=3)"
+    "keras_reg_estimators3, keras_reg_scores_train3, keras_reg_scores_test3, keras_reg_cv_results3 = train(features, targets, model_keras_sequential, keras_reg_param, outer_splits=3, inner_splits=3)"
    ]
   },
   {
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "0bdda349",
    "metadata": {},
    "outputs": [
@@ -1150,12 +1150,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test3"
+    "keras_reg_scores_test3.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "46fa19c9",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1221,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train3"
+    "keras_reg_scores_train3.describe()"
    ]
   },
   {
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "877963ff",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
     "    'model__activation': ['elu',],\n",
     "    'model__loss': ['mean_squared_error'],\n",
     "}\n",
-    "keras_reg_estimators4, keras_reg_scores_train4, keras_reg_scores_test4, keras_reg_cv_results4 = train(features, targets, model_keras_reg, keras_reg_param, outer_splits=3, inner_splits=3)"
+    "keras_reg_estimators4, keras_reg_scores_train4, keras_reg_scores_test4, keras_reg_cv_results4 = train(features, targets, model_keras_sequential, keras_reg_param, outer_splits=3, inner_splits=3)"
    ]
   },
   {
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "80d4685b",
    "metadata": {},
    "outputs": [
@@ -1478,12 +1478,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test4"
+    "keras_reg_scores_test4.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7588a94e",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1549,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train4"
+    "keras_reg_scores_train4.describe()"
    ]
   },
   {
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "440f20eb",
    "metadata": {},
    "outputs": [
@@ -1751,8 +1751,8 @@
     "    'model__loss': ['mean_squared_error'],\n",
     "    'model__learning_rate': [0.0005, 0.001, 0.005, 0.0075, 0.01],\n",
     "}\n",
-    "model_keras_reg2 = KerasRegressor(create_model2, verbose=0)\n",
-    "keras_reg_estimators5, keras_reg_scores_train5, keras_reg_scores_test5, keras_reg_cv_results5 = train(features, targets, model_keras_reg2, keras_reg_param, outer_splits=5, inner_splits=4)"
+    "model_keras_sequential_2 = KerasRegressor(create_model2, verbose=0)\n",
+    "keras_reg_estimators5, keras_reg_scores_train5, keras_reg_scores_test5, keras_reg_cv_results5 = train(features, targets, model_keras_sequential_2, keras_reg_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "6c7c8ad8",
    "metadata": {},
    "outputs": [
@@ -1870,12 +1870,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test5"
+    "keras_reg_scores_test5.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "1cf4cee8",
    "metadata": {},
    "outputs": [
@@ -1955,7 +1955,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train5"
+    "keras_reg_scores_train5.describe()"
    ]
   },
   {
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "75e88c6a",
    "metadata": {},
    "outputs": [
@@ -2199,8 +2199,8 @@
     "    'model__dropout':[0.01, 0.1, 0.15, 0.2],\n",
     "    'model__hidden_neurons2': [32],\n",
     "}\n",
-    "model_keras_reg3 = KerasRegressor(create_model3, verbose=0)\n",
-    "keras_reg_estimators6, keras_reg_scores_train6, keras_reg_scores_test6, keras_reg_cv_results6 = train(features, targets, model_keras_reg3, keras_reg_param, outer_splits=5, inner_splits=4)"
+    "model_keras_sequential_dropout = KerasRegressor(create_model3, verbose=0)\n",
+    "keras_reg_estimators6, keras_reg_scores_train6, keras_reg_scores_test6, keras_reg_cv_results6 = train(features, targets, model_keras_sequential_dropout, keras_reg_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "60386828",
    "metadata": {},
    "outputs": [
@@ -2318,12 +2318,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test6"
+    "keras_reg_scores_test6.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "5f024578",
    "metadata": {},
    "outputs": [
@@ -2403,7 +2403,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train6"
+    "keras_reg_scores_train6.describe()"
    ]
   },
   {
@@ -2541,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "cd82d4a1",
    "metadata": {},
    "outputs": [
@@ -2630,8 +2630,8 @@
     "    'model__hidden_neurons2': [24, 32, 48],\n",
     "    'model__activation': ['relu', 'elu'],\n",
     "}\n",
-    "model_keras_reg4 = KerasRegressor(create_model4, verbose=0)\n",
-    "keras_reg_estimators7, keras_reg_scores_train7, keras_reg_scores_test7, keras_reg_cv_results7 = train(features, targets, model_keras_reg4, keras_reg_param, outer_splits=5, inner_splits=4)"
+    "model_keras_model = KerasRegressor(create_model4, verbose=0)\n",
+    "keras_reg_estimators7, keras_reg_scores_train7, keras_reg_scores_test7, keras_reg_cv_results7 = train(features, targets, model_keras_model, keras_reg_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -2669,7 +2669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "56274072",
    "metadata": {},
    "outputs": [
@@ -2749,12 +2749,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test7"
+    "keras_reg_scores_test7.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "03f87a50",
    "metadata": {},
    "outputs": [
@@ -2834,7 +2834,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train7"
+    "keras_reg_scores_train7.describe()"
    ]
   },
   {
@@ -2954,6 +2954,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ab8fd3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras_reg_param = {\n",
+    "    'batch_size': [10],\n",
+    "    'epochs': [20], \n",
+    "    'model__hidden_neurons2': [32],\n",
+    "    'model__activation': ['elu'],\n",
+    "}\n",
+    "keras_model_estimators_final, keras_model__scores_train_final, keras_model_scores_test_final, keras_model_cv_results_final = train(features, targets, model_keras_model, keras_reg_param, outer_splits=5, inner_splits=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f30e09df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras_model_scores_test_final.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63e2f722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras_model__scores_train_final.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 124,
    "id": "994accdc",
    "metadata": {},
@@ -2973,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "82ac3568",
    "metadata": {},
    "outputs": [
@@ -3062,8 +3098,8 @@
     "    'model__hidden_neurons2': [24, 32, 48],\n",
     "    'model__dropout':[0.1, 0.15, 0.2],\n",
     "}\n",
-    "model_keras_reg5 = KerasRegressor(create_model5, verbose=0)\n",
-    "keras_reg_estimators8, keras_reg_scores_train8, keras_reg_scores_test8, keras_reg_cv_results8 = train(features, targets, model_keras_reg5, keras_reg_param, outer_splits=5, inner_splits=4)"
+    "model_keras_model_dropout = KerasRegressor(create_model5, verbose=0)\n",
+    "keras_reg_estimators8, keras_reg_scores_train8, keras_reg_scores_test8, keras_reg_cv_results8 = train(features, targets, model_keras_model_dropout, keras_reg_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -3101,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "0237c437",
    "metadata": {},
    "outputs": [
@@ -3181,12 +3217,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test8"
+    "keras_reg_scores_test8.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "3455489c",
    "metadata": {},
    "outputs": [
@@ -3266,7 +3302,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train8"
+    "keras_reg_scores_train8.describe()"
    ]
   },
   {
@@ -3386,7 +3422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "00e9d4e6",
    "metadata": {},
    "outputs": [
@@ -3475,7 +3511,7 @@
     "    'model__hidden_neurons2': [32],\n",
     "    'model__dropout':[0.05, 0.2, 0.25],\n",
     "}\n",
-    "keras_reg_estimators9, keras_reg_scores_train9, keras_reg_scores_test9, keras_reg_cv_results9 = train(features, targets, model_keras_reg5, keras_reg_param, outer_splits=5, inner_splits=4)"
+    "keras_reg_estimators9, keras_reg_scores_train9, keras_reg_scores_test9, keras_reg_cv_results9 = train(features, targets, model_keras_model_dropout, keras_reg_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -3513,7 +3549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "e4aa7cde",
    "metadata": {},
    "outputs": [
@@ -3593,12 +3629,12 @@
     }
    ],
    "source": [
-    "keras_reg_scores_test9"
+    "keras_reg_scores_test9.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "3744857e",
    "metadata": {},
    "outputs": [
@@ -3678,7 +3714,7 @@
     }
    ],
    "source": [
-    "keras_reg_scores_train9"
+    "keras_reg_scores_train9.describe()"
    ]
   },
   {
@@ -3798,7 +3834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "c079bed8",
    "metadata": {},
    "outputs": [
@@ -3880,185 +3916,7 @@
      ]
     }
    ],
-   "source": [
-    "keras_reg_param = {\n",
-    "    'batch_size': [10],\n",
-    "    'epochs': [20], \n",
-    "    'model__hidden_neurons2': [32],\n",
-    "    'model__activation': ['elu'],\n",
-    "}\n",
-    "keras_reg_estimators10, keras_reg_scores_train10, keras_reg_scores_test10, keras_reg_cv_results10 = train(features, targets, model_keras_reg4, keras_reg_param, outer_splits=5, inner_splits=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "id": "9e19d9bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean_absolute_error</th>\n",
-       "      <th>mean_squared_error</th>\n",
-       "      <th>r2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.532157</td>\n",
-       "      <td>-4.687946</td>\n",
-       "      <td>0.563196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.458556</td>\n",
-       "      <td>-4.231743</td>\n",
-       "      <td>0.589194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.457393</td>\n",
-       "      <td>-4.441846</td>\n",
-       "      <td>0.567244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-1.512785</td>\n",
-       "      <td>-4.340142</td>\n",
-       "      <td>0.583291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-1.647528</td>\n",
-       "      <td>-4.798822</td>\n",
-       "      <td>0.531815</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   mean_absolute_error  mean_squared_error        r2\n",
-       "0            -1.532157           -4.687946  0.563196\n",
-       "1            -1.458556           -4.231743  0.589194\n",
-       "2            -1.457393           -4.441846  0.567244\n",
-       "3            -1.512785           -4.340142  0.583291\n",
-       "4            -1.647528           -4.798822  0.531815"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keras_reg_scores_test10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "id": "81ee88e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean_absolute_error</th>\n",
-       "      <th>mean_squared_error</th>\n",
-       "      <th>r2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.493164</td>\n",
-       "      <td>-4.189034</td>\n",
-       "      <td>0.593600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.479765</td>\n",
-       "      <td>-4.235544</td>\n",
-       "      <td>0.593351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.430246</td>\n",
-       "      <td>-4.443189</td>\n",
-       "      <td>0.573792</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-1.493353</td>\n",
-       "      <td>-4.234124</td>\n",
-       "      <td>0.592369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-1.581520</td>\n",
-       "      <td>-4.677306</td>\n",
-       "      <td>0.551482</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   mean_absolute_error  mean_squared_error        r2\n",
-       "0            -1.493164           -4.189034  0.593600\n",
-       "1            -1.479765           -4.235544  0.593351\n",
-       "2            -1.430246           -4.443189  0.573792\n",
-       "3            -1.493353           -4.234124  0.592369\n",
-       "4            -1.581520           -4.677306  0.551482"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keras_reg_scores_train10"
-   ]
+   "source": []
   }
  ],
  "metadata": {
