--- a/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
+++ b/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
@@ -3835,88 +3835,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c079bed8",
+   "id": "fcfa224d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=4.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=4.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=4.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=4.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=4.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "keras_reg_param = {\n",
+    "    'batch_size': [10],\n",
+    "    'epochs': [10], \n",
+    "    'model__hidden_neurons2': [32],\n",
+    "    'model__dropout':[0.05],\n",
+    "}\n",
+    "keras_model_dropout_estimators_final, keras_model_dropout_scores_train_final, keras_model_dropout_scores_test_final, keras_model_dropout_cv_results_final = train(features, targets, model_keras_model_dropout, keras_reg_param, outer_splits=5, inner_splits=4)"
+   ]
   }
  ],
  "metadata": {
