--- a/oblig3_og_4/neural_networks/student_performance_neural.ipynb
+++ b/oblig3_og_4/neural_networks/student_performance_neural.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d01de630",
    "metadata": {},
    "outputs": [
@@ -155,8 +155,8 @@
     "    'model__optimizer': ['adam', 'sgd', 'rmsprop'],\n",
     "    'model__activation': ['relu', 'tanh', 'elu', 'swish'],\n",
     "}\n",
-    "keras_class_model = KerasClassifier(model=create_model, verbose=0)\n",
-    "keras_estimators, keras_scores_train, keras_scores_test, keras_cv_results = train(features, targets, keras_class_model, keras_class_param, outer_splits=3, inner_splits=3)"
+    "keras_sequential = KerasClassifier(model=create_model, verbose=0)\n",
+    "keras_estimators, keras_scores_train, keras_scores_test, keras_cv_results = train(features, targets, keras_sequential, keras_class_param, outer_splits=3, inner_splits=3)"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0dbd900b",
    "metadata": {},
    "outputs": [
@@ -264,12 +264,12 @@
     }
    ],
    "source": [
-    "keras_scores_test"
+    "keras_scores_test.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1a9e4cec",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "keras_scores_train"
+    "keras_scores_train.describe()"
    ]
   },
   {
@@ -455,8 +455,7 @@
     "    'model__optimizer': ['adam', 'rmsprop'],\n",
     "    'model__activation': ['relu', 'elu', 'swish'],\n",
     "}\n",
-    "keras_class_model_2 = KerasClassifier(model=create_model, verbose=0)\n",
-    "keras_estimators_2, keras_scores_train_2, keras_scores_test_2, keras_cv_results_2 = train(features, targets, keras_class_model_2, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_estimators_2, keras_scores_train_2, keras_scores_test_2, keras_cv_results_2 = train(features, targets, keras_sequential, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -495,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4d4c2841",
    "metadata": {},
    "outputs": [
@@ -581,12 +580,12 @@
     }
    ],
    "source": [
-    "keras_scores_test_2"
+    "keras_scores_test_2.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1007f1c5",
    "metadata": {},
    "outputs": [
@@ -672,7 +671,7 @@
     }
    ],
    "source": [
-    "keras_scores_train_2"
+    "keras_scores_train_2.describe()"
    ]
   },
   {
@@ -807,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d76ac13c",
    "metadata": {},
    "outputs": [
@@ -830,7 +829,7 @@
     "    'model__optimizer': ['adam', 'rmsprop'],\n",
     "    'model__activation': ['relu','swish'],\n",
     "}\n",
-    "keras_estimators_3, keras_scores_train_3, keras_scores_test_3, keras_cv_results_3 = train(features, targets, keras_class_model, keras_class_param, outer_splits=3, inner_splits=3)"
+    "keras_estimators_3, keras_scores_train_3, keras_scores_test_3, keras_cv_results_3 = train(features, targets, keras_sequential, keras_class_param, outer_splits=3, inner_splits=3)"
    ]
   },
   {
@@ -869,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "691f1897",
    "metadata": {},
    "outputs": [
@@ -939,12 +938,12 @@
     }
    ],
    "source": [
-    "keras_scores_test_3"
+    "keras_scores_test_3.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "75080b22",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1013,7 @@
     }
    ],
    "source": [
-    "keras_scores_train_3"
+    "keras_scores_train_3.describe()"
    ]
   },
   {
@@ -1124,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "f13b8eb5",
    "metadata": {},
    "outputs": [
@@ -1149,8 +1148,8 @@
     "    'model__activation': ['swish'],\n",
     "    'model__learing_rate': [0.0001, 0.0005, 0.0008, 0.001],\n",
     "}\n",
-    "keras_class_model_3 = KerasClassifier(model=create_model_2, verbose=0)\n",
-    "keras_estimators_4, keras_scores_train_4, keras_scores_test_4, keras_cv_results_4 = train(features, targets, keras_class_model_3, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_sequential_2 = KerasClassifier(model=create_model_2, verbose=0)\n",
+    "keras_estimators_4, keras_scores_train_4, keras_scores_test_4, keras_cv_results_4 = train(features, targets, keras_sequential_2, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -1188,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "1f52ec7b",
    "metadata": {},
    "outputs": [
@@ -1274,12 +1273,12 @@
     }
    ],
    "source": [
-    "keras_scores_test_4"
+    "keras_scores_test_4.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "53d1a0ec",
    "metadata": {},
    "outputs": [
@@ -1365,7 +1364,7 @@
     }
    ],
    "source": [
-    "keras_scores_train_4"
+    "keras_scores_train_4.describe()"
    ]
   },
   {
@@ -1500,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "c9c35b70",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1524,7 @@
     "    'model__activation': ['swish'],\n",
     "    'model__learing_rate': [0.0005, 0.001, 0.0025, 0.005],\n",
     "}\n",
-    "keras_estimators_5, keras_scores_train_5, keras_scores_test_5, keras_cv_results_5 = train(features, targets, keras_class_model_3, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_estimators_5, keras_scores_train_5, keras_scores_test_5, keras_cv_results_5 = train(features, targets, keras_sequential_2, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -1563,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "c041b1c8",
    "metadata": {},
    "outputs": [
@@ -1649,12 +1648,12 @@
     }
    ],
    "source": [
-    "keras_scores_test_5"
+    "keras_scores_test_5.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "a051ff70",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1739,7 @@
     }
    ],
    "source": [
-    "keras_scores_train_5"
+    "keras_scores_train_5.describe()"
    ]
   },
   {
@@ -1895,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "328701ca",
    "metadata": {},
    "outputs": [
@@ -1919,8 +1918,8 @@
     "    'model__activation': ['swish', 'relu'],\n",
     "    'model__dropout': [0.05, 0.1, 0.15, 0.2]\n",
     "}\n",
-    "keras_class_model_4 = KerasClassifier(model=create_model_3, verbose=0)\n",
-    "keras_estimators_6, keras_scores_train_6, keras_scores_test_6, keras_cv_results_6 = train(features, targets, keras_class_model_4, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_sequential_dropout = KerasClassifier(model=create_model_3, verbose=0)\n",
+    "keras_estimators_6, keras_scores_train_6, keras_scores_test_6, keras_cv_results_6 = train(features, targets, keras_sequential_dropout, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -2306,8 +2305,8 @@
     "    'model__hidden_neurons2': [24, 36, 48],\n",
     "    'model__activation': ['swish', 'relu'],\n",
     "}\n",
-    "keras_class_model_5 = KerasClassifier(model=create_model_4, verbose=0)\n",
-    "keras_estimators_7, keras_scores_train_7, keras_scores_test_7, keras_cv_results_7 = train(features, targets, keras_class_model_5, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_model = KerasClassifier(model=create_model_4, verbose=0)\n",
+    "keras_estimators_7, keras_scores_train_7, keras_scores_test_7, keras_cv_results_7 = train(features, targets, keras_model, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -2568,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "f0d1885f",
    "metadata": {},
    "outputs": [
@@ -2592,8 +2591,8 @@
     "    'model__activation': ['swish'],\n",
     "    'model__dropout': [0.05, 0.1, 0.15, 0.2]\n",
     "}\n",
-    "keras_class_model_6 = KerasClassifier(model=create_model_5, verbose=0)\n",
-    "keras_estimators_8, keras_scores_train_8, keras_scores_test_8, keras_cv_results_8 = train(features, targets, keras_class_model_6, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_model_dropout = KerasClassifier(model=create_model_5, verbose=0)\n",
+    "keras_estimators_8, keras_scores_train_8, keras_scores_test_8, keras_cv_results_8 = train(features, targets, keras_model_dropout, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
@@ -3168,7 +3167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "7fa029f3",
    "metadata": {},
    "outputs": [
@@ -3193,12 +3192,12 @@
     "    'model__activation': ['swish'],\n",
     "    'model__learing_rate': [0.001],\n",
     "}\n",
-    "keras_estimators_9, keras_scores_train_9, keras_scores_test_9, keras_cv_results_9 = train(features, targets, keras_class_model_3, keras_class_param, outer_splits=5, inner_splits=4)"
+    "keras_model_estimators_final, keras_model_scores_train_final, keras_model_scores_test_final, keras_model_cv_results_final = train(features, targets, keras_model, keras_class_param, outer_splits=5, inner_splits=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "0b638737",
    "metadata": {},
    "outputs": [
@@ -3308,12 +3307,12 @@
     }
    ],
    "source": [
-    "keras_scores_test_9.describe()"
+    "keras_model_scores_test_final.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "e613d943",
    "metadata": {},
    "outputs": [
@@ -3423,7 +3422,7 @@
     }
    ],
    "source": [
-    "keras_scores_train_9.describe()"
+    "keras_model_scores_train_final.describe()"
    ]
   }
  ],
