--- a/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
+++ b/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "854f3bf3",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c00ed039",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d0feebf5",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f6ee8d50",
    "metadata": {},
    "outputs": [],
@@ -163,6 +163,8 @@
     "-  For alle modellene komm jeg til å bruke linjer (default) som aktiverings fuksjon for output layeret da det er denne som noramlt brukes for regresjons analyser.\n",
     "\n",
     "- For tuningen av modellene kommer jeg til å fokusere på følgene verdier loss fuksjon ved compliering , aktiverings funksjon for hidden layers, optimizer ved compilering, antall nevroner for 1 og 2 hidden layer, batch size, learing rate for optimizer og dropout for de modellene som inkludere dropout layer.\n",
+    "\n",
+    "- Videre kommer jeg til å tune optimizer, activation function og loss function først og i hovedsak beholde disse resultatene for tuning av resten av modellene da disse i stor grad påvirkes av selve datasettet. Jeg har valg å gjøre dette som et tidssparende tiltak da jeg mener dette fortsatt viser tilstrekkelig forståelse for tuningen av disse parameterne. Men i en reell situasjon vil jeg selvfølgelig tune disse parameterne mer utfyllende for alle modellen. Jeg kommer også til å bruke samme fremgang måte for andre parametere for de modellene hvor jeg kun legger til dropout layer uten å endre modellen noe videre enn det.\n",
     "\n",
     "- Jeg har gjort en grunnleggen sjekk i forkant sli at tuning verdiene jeg starter ikke er for langt unna jeg som blir slutt resultatet. Jeg valg å gjøre dette da parametere som er veldig ulik slutt resultat vil kunne påvirker resultatet for tuningene av de forskjellige parameterene. \n",
     "\n",
@@ -2050,14 +2052,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eab0f8c6",
-   "metadata": {},
-   "source": [
-    "fortsett her......."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "440f20eb",
@@ -2531,6 +2525,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0233c70a",
+   "metadata": {},
+   "source": [
+    "#### Keras Sequential\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "93cb1c4a",
@@ -2853,7 +2856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "687f7f09",
    "metadata": {},
    "outputs": [],
@@ -6128,6 +6131,99 @@
    "source": [
     "keras_model_dropout_scores_train_final.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6a4748c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model6(activation='elu', loss='mean_squared_error', hidden_neurons1=128, reduction_factor=0.5, dropout=0.1, layers=5):\n",
+    "    model = Sequential()\n",
+    "    model.add(Input(shape=(8,)))\n",
+    "    model.add(Dense(hidden_neurons1, activation=activation))\n",
+    "    if(dropout > 0):\n",
+    "        model.add(Dropout(dropout))\n",
+    "    for layer in range(0, layers+1):\n",
+    "        model.add(Dense(int(hidden_neurons1*reduction_factor), activation=activation))\n",
+    "    if(dropout > 0):\n",
+    "        model.add(Dropout(dropout))\n",
+    "    model.add(Dense(1))\n",
+    "    model.compile(optimizer=Adam(learning_rate=0.005), loss=loss, metrics=['mean_squared_error'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74401e49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=3.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "keras_reg_param = {\n",
+    "    'batch_size': [10],\n",
+    "    'epochs': [10],\n",
+    "    'model__hidden_neurons1': [250, 500],\n",
+    "    'model__layers': [3, 6, 9],\n",
+    "    'model__reduction_factor': [0.5],\n",
+    "    'model__activation': ['elu'],\n",
+    "    'model__dropout':[0.1],\n",
+    "}\n",
+    "model_keras_sequential_multilayer = KerasRegressor(create_model6, verbose=0)\n",
+    "keras_reg_estimators9, keras_reg_scores_train9, keras_reg_scores_test9, keras_reg_cv_results9 = train(features, targets, model_keras_sequential_multilayer, keras_reg_param, outer_splits=5, inner_splits=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f6e162a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52e90a86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8fe2acf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f62514fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06390f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
