--- a/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
+++ b/oblig3_og_4/neural_networks/abalone_age_neural.ipynb
@@ -172,6 +172,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9af4ed04",
+   "metadata": {},
+   "source": [
+    "#### Kearas sequential start"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "5fe7be8d",
@@ -189,14 +197,6 @@
     "    model.compile(optimizer=optimizer, loss=loss, metrics=['mean_squared_error'])\n",
     "    return model\n",
     "model_keras_sequential = KerasRegressor(model=create_model, verbose=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b307767",
-   "metadata": {},
-   "source": [
-    "ref: https://medium.com/@am.benatmane/keras-hyperparameter-tuning-using-sklearn-pipelines-grid-search-with-cross-validation-ccfc74b0ce9f"
    ]
   },
   {
@@ -264,15 +264,6 @@
     "    'model__loss': ['mean_squared_error', 'mean_absolute_error'],\n",
     "}\n",
     "keras_reg_estimators, keras_reg_scores_train, keras_reg_scores_test, keras_reg_cv_results = train(features, targets, model_keras_sequential, keras_reg_param, outer_splits=3, inner_splits=3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ade34b35",
-   "metadata": {},
-   "source": [
-    "husk problmer med 'sgd' feil ut pga Nan verdier med denne i bruk.\n",
-    "https://www.geeksforgeeks.org/deep-learning/optimizers-in-tensorflow/\n"
    ]
   },
   {
@@ -2525,15 +2516,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0233c70a",
-   "metadata": {},
-   "source": [
-    "#### Keras Sequential\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "93cb1c4a",
@@ -2847,11 +2829,29 @@
    "id": "8e738596",
    "metadata": {},
    "source": [
-    "#### Keras Sequential\n",
+    "#### Keras Sequential end\n",
     "\n",
-    "- For denne modellen har valgt å inkludere 3 hidden layers i tilleg til input og output layers. For 2 av disse har jeg lagt inn muligheten for tuning av antall nevroner, mens for det siste layeret har jeg ikke inkuldert noen mulighet for dette.\n",
+    "- For resultater for denne modellen se code celler mellom markdown keras seqential start og end.\n",
     "\n",
-    "- "
+    "- For denne modellen har valg å bruke 3 hidden layers i tillegg til input og output layer, hvor det er mulig å tune antall nevroner for hidden layer 1 og 2.\n",
+    "\n",
+    "- Sidene dette er den første modellen jeg tuner for dette keras modeller for dette datasettet startet jeg ført med å tune optimizer, activation function og loss function. \n",
+    "\n",
+    "- For loss function er det tydelig at mean squared error gir best resultater og det er denne jeg kommer til å bruke videre. \n",
+    "\n",
+    "- For optimizer så prøve jeg også i utgangspunktet å inkludere sgd i tuning, men jeg fikk problemer Nan verdier for denne, derfor valgte jeg å ikke ta denne med videre. For tuningen av optimizer så kan vi se av resultatene at adam gir best uttelling, både i forhold til plotet for f1 og best estimator fra GridSearchCV.\n",
+    "\n",
+    "- For activation function ser vi at det er elu som ser ut til å gi best resultater både når vi ser plotet for f1 og for utvalget av best estimator for GridSearchCV.\n",
+    "\n",
+    "- Ut ifra verdiene som er testet for antall nevroner i hidden layer 1 så ser det ut til at verdier mellom 128 og 192 gir relativt tilsvarende resultater, men plotene til f1 ser ut til å ha en negativ trend for verdier høyere enn 128 og lavere enn 128. Ut ifra en helhetlig vurdering av f1 plotene og mean resultatene for r2 score valget jeg 128 som verdien for denne parameteren.\n",
+    "\n",
+    "- For hidden layer 2 ser vi f1 plotene ser ut til å vise at 32 gir best resultater, men når vi ser på best estimators fra GridSeachCV ser vi også at 24 ser ut til å gi bra resultater, men basert på helheten av resultatene valget jeg 32 som den beste verdien. Vi kan også av resultatene for f1 plotene at disse hadde en positiv trend mellom 48 og 64, men jeg valgte å ikke utforske dette videre ut ifra en helhetlig vurdering.\n",
+    "\n",
+    "- For tuningen av learning rate endte jeg opp med å velge en verdi på 0.001. Når vi ser på resultatene for f1 plotene så ser det ut til at laver verdier for denne parameteren gir best resultater, men plotet flatter ut for veldig lave verdier. Når vi også ser på resultatene for best estimator fra GridSearchCV så landet jeg på at 0.001 var det beste valget, men jeg kunne like godt valgt 0.0005 som verdi da disse ser ut til å gi veldig like resultater.\n",
+    "\n",
+    "- For tuningen av batch size ser vi at f1 plotene tyder på at verdier mellom 10 og 20 gir veldig like resultater, men verdier som er lavere enn 10 ser ut til å gi dårligere resultater. Ut ifra andre tester som jeg har kjørt som ikke er inkludert i denne filen så vi verdier over 20 gir dårligere resultater enn for verdier mellom 10 og 20. Ut ifra helheten av resultatene fra f1 plottene og best estimator fra GridSeachCV så valgte jeg å bruke 10 som verdi for denne parameteren. \n",
+    " \n",
+    "- Samlet sett ente jeg da opp med en endelig modell med disse parameterene. Batch size: 10, hidden neurons1: 128, hidden neurons2: 32, activation function: elu, loss function: mean squeard error, optimizer: adam, learing rate: 0.001.\n"
    ]
   },
   {
@@ -6131,99 +6131,6 @@
    "source": [
     "keras_model_dropout_scores_train_final.describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6a4748c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_model6(activation='elu', loss='mean_squared_error', hidden_neurons1=128, reduction_factor=0.5, dropout=0.1, layers=5):\n",
-    "    model = Sequential()\n",
-    "    model.add(Input(shape=(8,)))\n",
-    "    model.add(Dense(hidden_neurons1, activation=activation))\n",
-    "    if(dropout > 0):\n",
-    "        model.add(Dropout(dropout))\n",
-    "    for layer in range(0, layers+1):\n",
-    "        model.add(Dense(int(hidden_neurons1*reduction_factor), activation=activation))\n",
-    "    if(dropout > 0):\n",
-    "        model.add(Dropout(dropout))\n",
-    "    model.add(Dense(1))\n",
-    "    model.compile(optimizer=Adam(learning_rate=0.005), loss=loss, metrics=['mean_squared_error'])\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74401e49",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:811: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=3.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "keras_reg_param = {\n",
-    "    'batch_size': [10],\n",
-    "    'epochs': [10],\n",
-    "    'model__hidden_neurons1': [250, 500],\n",
-    "    'model__layers': [3, 6, 9],\n",
-    "    'model__reduction_factor': [0.5],\n",
-    "    'model__activation': ['elu'],\n",
-    "    'model__dropout':[0.1],\n",
-    "}\n",
-    "model_keras_sequential_multilayer = KerasRegressor(create_model6, verbose=0)\n",
-    "keras_reg_estimators9, keras_reg_scores_train9, keras_reg_scores_test9, keras_reg_cv_results9 = train(features, targets, model_keras_sequential_multilayer, keras_reg_param, outer_splits=5, inner_splits=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f6e162a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52e90a86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8fe2acf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f62514fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06390f0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
